--- a/design/membership.html
+++ b/design/membership.html
@@ -20,7 +20,7 @@
          <div class="row text-center">
             <div class="col-lg-4 col-md-4  offset-lg-4">
                <a href="main.html"><img src="images/IRS.png" class="imgWrap1"></a>
-               <span class="btm_text">Road safety Membership</span>
+               <span class="btm_text">Road safety Membership Registration</span>
                <div class="find-location">
                   <div class="col-lg-12 col-md-12">
                      <div class="row Member_labels">
@@ -46,17 +46,9 @@
                         <div class="col-lg-4 lableTxt">Email Id</div>
                         <div class="col-lg-8"><input type="text" class="form-control"  placeholder="Email ID"></div>
                      </div>
-                     <div class="row Member_labels">
-                        <div class="col-lg-4 lableTxt">Upload Pic</div>
-                        <div class="col-lg-8">
-                           <div class="custom-file">
-                              <input type="file" class="custom-file-input" id="inputGroupFile01"
-                                 aria-describedby="inputGroupFileAddon01">
-                              <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
-                           </div>
-                        </div>
-                     </div>
+                     
                      <a href="main.html"><button class="btn btn-primary btn_submit">Submit</button></a>
+                     <div class="Reg_link"><span>Already Registered? </span><a href="member_login.html">Login</a></div>
                   </div>
                </div>
             </div>
