--- a/design/password.html
+++ b/design/password.html
@@ -20,39 +20,15 @@
          <div class="row text-center">
             <div class="col-lg-4 col-md-4  offset-lg-4">
                <a href="main.html"><img src="images/IRS.png" class="imgWrap1"></a>
-               <span class="btm_text">Road safety Partnership Registration</span>
+               <span class="btm_text">Please Enter One Time Password</span>
                <div class="find-location">
                   <div class="col-lg-12 col-md-12">
                      <div class="row Member_labels">
-                        <div class="col-lg-4 lableTxt">Full Name</div>
-                        <div class="col-lg-8"><input type="text" class="form-control"  placeholder="Full Name"></div>
+                        <div class="col-lg-4 lableTxt">OTP</div>
+                        <div class="col-lg-8"><input type="text" class="form-control"  placeholder="Please enter OTP"></div>
                      </div>
-                     <div class="row Member_labels">
-                        <div class="col-lg-4 lableTxt">Organisation Name</div>
-                        <div class="col-lg-8"><input type="text" class="form-control"  placeholder="Organisation Name"></div>
-                     </div>
-                     <div class="row Member_labels">
-                        <div class="col-lg-4 lableTxt">Location</div>
-                        <div class="col-lg-8">
-                           <select class="state_select">
-                              <option>Select Your State</option>
-                              <option>Andhra Pradesh</option>
-                              <option>Telangana</option>
-                              <option>Karnataka</option>
-                           </select>
-                        </div>
-                     </div>
-                     <div class="row Member_labels">
-                        <div class="col-lg-4 lableTxt">Mobile No</div>
-                        <div class="col-lg-8"><input type="text" class="form-control"  placeholder="Mobile No"></div>
-                     </div>
-                     <div class="row Member_labels">
-                        <div class="col-lg-4 lableTxt">Email Id</div>
-                        <div class="col-lg-8"><input type="text" class="form-control"  placeholder="Email ID"></div>
-                     </div>
-                    
-                     <a href="main.html"><button class="btn btn-primary btn_submit">Submit</button></a>
-                     <div class="Reg_link"><span>Already Registered? </span><a href="partner_login.html">Login</a></div>
+                     <a href="#"><button class="btn btn-primary btn_submit">Submit</button></a>
+                     
                   </div>
                </div>
             </div>
