--- a/design/Galphotos.html
+++ b/design/Galphotos.html
@@ -222,6 +222,8 @@
                            </ul>
                         </li>
                         <li class="nav-item">
+                           <a class="nav-link" href="members_total.html">Members</a>
+                        </li><li class="nav-item">
                            <a class="nav-link" href="contact.html">Contact Us</a>
                         </li>
                      </ul>
